format status response
